--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
 
     <!-- nav section -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top px-5">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="./images/food icon.png" alt="logo" height="70px">
@@ -45,7 +45,7 @@
     </nav>
 
    <!-- hero section -->
-    <div class="p-5 text-center bg-image align-content-center img-fluid" style="
+    <div class="p-5 text-center bg-image align-content-center img-fluid px-5" style="
     background-image: url('./images/jollof\ rice\ and\ chicken.jpg'); height: 500px;">
   <div class="mask">
     <div class="d-flex justify-content-center align-items-center h-100">
@@ -107,7 +107,7 @@
         </div>
       </div>
     
-      <div class="row text-center d-flex align-items-stretch">
+      <div class="row text-center d-flex align-items-stretch px-5">
         <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
           <div class="card testimonial-card">
             <div class="card-up" style="background-color: #4aa164;"></div>
